Fixed contrast errors

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -68,7 +68,7 @@ li a {
 
 li a:hover {
     background-color: var(--clr-accent);
-    color: var(--clr-light);
+    color: var(--clr-primary);
     border-radius: 8px;
     transition: background-color 0.3s ease;
 }
@@ -109,7 +109,7 @@ h1 {
     position: absolute;
     top: 300px;
     background-color: var(--clr-secondary);
-    opacity: 0.75;
+    opacity: 0.9;
     color: var(--clr-light);
 }
 
